# deviatdd

./: .env.example  .gitattributes  .gitignore  .tdd-session.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MEMORY.md  README.md  SECURITY.md  findings.md  mise.toml  package-lock.json  package.json  pyproject.toml  review-report.md
.deviate/: .gitignore  config.toml  rollback.jsonl  session.json
.deviate/evaluations/: deviate-flows-skill-2026-06-26.json
.deviate/manifests/: T002.json
.factory/: .gitignore
.githooks/: post-checkout  post-commit  pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
.opencode/index/: codebase.db  codebase.db-shm  failed-batches.json  file-hashes.json  inverted-index.json  vectors  vectors.meta.json
apps/docs/: astro.config.mjs  mise.toml  package-lock.json  package.json
pr_descriptions/: feat-001-deviate-cli-python-001-cli-initialization-governance-provisioning-pr-11.md  feat-001-deviate-cli-python-003-meso-layer-specification-task-decomposition.md  feat-001-deviate-cli-python-004-micro-layer-tdd-sandbox-execution.md  feat-001-deviate-cli-python-005-cli-architecture-realignment-skill-integration.md  feat-001-deviate-cli-python-007-macro-meso-parity-backward-compatibility.md  feat-002-deviatdd-gap-analysis-001-foundation-cli-infrastructure.md  feat-002-deviatdd-gap-analysis-003-fast-path-commands.md  feat-002-deviatdd-gap-analysis-004-governance-inspection.md  feat-adhoc-001-streaming-pipeline-monitor.md  feat-adhoc-008-ast-phase-prioritization.md  feat_adhoc_002-aider-agent-backend-integration.md  pr-38.md  pr-39.md  pr-40.md  pr-41.md  pr-42.md  pr-43.md  pr-44.md  pr-45.md
prompts/deviate-adhoc/: SKILL.md
prompts/deviate-constitution/: SKILL.md  deviate-constitution.sh
prompts/deviate-context/: SKILL.md  deviate-context.sh
prompts/deviate-cycle/: SKILL.md
prompts/deviate-e2e/: SKILL.md  deviate-e2e.sh
prompts/deviate-execute/: SKILL.md  deviate-execute.sh
prompts/deviate-explore/: SKILL.md  deviate-explore.sh
prompts/deviate-green/: SKILL.md  deviate-green.sh
prompts/deviate-hotfix/: SKILL.md  deviate-hotfix.sh
prompts/deviate-prd/: SKILL.md  deviate-prd.sh
prompts/deviate-prune/: SKILL.md  deviate-prune.sh
prompts/deviate-red/: SKILL.md  deviate-red.sh
prompts/deviate-refactor/: SKILL.md  deviate-refactor.sh
prompts/deviate-research/: SKILL.md  deviate-research.sh
prompts/deviate-shard/: SKILL.md  deviate-shard.sh
prompts/deviate-specify/: SKILL.md  deviate-specify.sh
prompts/deviate-tasks/: SKILL.md  deviate-tasks.sh
prompts/deviate-triage/: SKILL.md
scripts/: benchmark_lmstudio.py  verify_install.py
specs/: DeviaTDD-api.md  DeviaTDD-architecture.md  constitution.md  implementation-gap.md  issues.jsonl
specs/001-deviate-cli-python/: design.md  prd.md
specs/002-deviatdd-gap-analysis/: data-model.md  design.md  explore.md  plan-tdd-integration-gap.md  prd.md
specs/003-graphite-cli-integration/: explore.md
specs/003-prompt-optimization/: data-model.md  design.md  explore.md
specs/004-graphite-pr-stacks/: data-model.md  design.md  explore.md
specs/_product/: architecture.md  domain-model.md  release-next.md
specs/adhoc/: prd.md
specs/explore/: ast-tree-sitter.md  flow-ledger.md  graphite-cli.md  pi-agent-backend.md  product-layer.md  rpc-streaming-tui.md  rpc-streaming.md  tome-subsystem.md
src/deviate/: __init__.py  main.py
tests/: conftest.py  test_init.py
tests/cli/: test_micro.py
tests/core/: test_agent.py  test_treesitter.py  test_treesitter_checks.py
tests/e2e/: test_macro_workflow.bats
tests/test_cli/: test_adhoc.py  test_common.py  test_constitution.py  test_feature.py  test_help.py  test_herdr_status.py  test_init.py  test_inspect.py  test_macro_contracts.py  test_main_entrypoint.py  test_merge.py  test_meso.py  test_meso_contracts.py  test_micro.py  test_review.py  test_test_command_resolution.py  test_tome.py  test_top_level_run.py
tests/test_core/: test_agent.py  test_cache_discipline.py  test_commands.py  test_commit.py  test_complexity.py  test_constitution.py  test_contract.py  test_convention.py  test_epic.py  test_flow_confirmation.py  test_herdr.py  test_issues.py  test_ledger.py  test_prd.py  test_profile.py  test_repo.py  test_run_logger.py  test_skills.py  test_specs_html.py  test_tamper.py  test_tasks_ledger.py  test_validation.py  (+1 more)
(+440 files in other folders)
