[project]
name = "deviate"
version = "0.1.0"
description = "DeviaTDD CLI — agent orchestration framework"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
deviate = "deviate.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deviate"]

[tool.ruff]
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
    "typer>=0.26.7",
]
