[project]
name = "deviate"
version = "0.3.1"
description = "DeviaTDD CLI — agent orchestration framework"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0.3",
    "tree-sitter>=0.24",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-cpp>=0.23",
    "tree-sitter-elixir>=0.3",
    "tree-sitter-c-sharp>=0.23",
    "tree-sitter-markdown>=0.4",
    "tree-sitter-bash>=0.23",
    "tree-sitter-json>=0.23",
    "tree-sitter-toml>=0.7",
    "tree-sitter-yaml>=0.7",
    "tree-sitter-html>=0.23",
    "tree-sitter-css>=0.23",
    "tree-sitter-sql>=0.3",
    "tree-sitter-dockerfile>=0.2",
    "tree-sitter-hcl>=1.0",
    "tree-sitter-kotlin>=1.0",
    "tree-sitter-swift>=0.7",
]

[project.scripts]
deviate = "deviate.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deviate"]

[tool.ruff]
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
    "typer>=0.26.7",
]
