[project]
name = "deviatdd"
version = "2.5.3"
description = "DeviaTDD CLI — agent orchestration framework"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Werner Bisschoff" },
]
keywords = [
    "tdd",
    "agent-orchestration",
    "test-driven-development",
    "ai-coding-agents",
    "spec-driven-development",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0.3",
    "tree-sitter>=0.24",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-cpp>=0.23",
    "tree-sitter-elixir>=0.3",
    "tree-sitter-c-sharp>=0.23",
    "tree-sitter-markdown>=0.4",
    "tree-sitter-bash>=0.23",
    "tree-sitter-json>=0.23",
    "tree-sitter-toml>=0.7",
    "tree-sitter-yaml>=0.7",
    "tree-sitter-html>=0.23",
    "tree-sitter-css>=0.23",
    "tree-sitter-sql>=0.3",
    "tree-sitter-dockerfile>=0.2",
    "tree-sitter-hcl>=1.0",
    "tree-sitter-kotlin>=1.0",
    "tree-sitter-swift>=0.7",
]

[project.scripts]
deviate = "deviate.main:app"

[project.urls]
Homepage = "https://github.com/wernerbisschoff/deviatdd"
Repository = "https://github.com/wernerbisschoff/deviatdd"
Issues = "https://github.com/wernerbisschoff/deviatdd/issues"
Changelog = "https://github.com/wernerbisschoff/deviatdd/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "pytest-testmon>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deviate"]

[tool.ruff]
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-testmon>=2.2.0",
    "ruff>=0.15.16",
    "typer>=0.26.7",
]
